--- a/SaveBattle.csproj
+++ b/SaveBattle.csproj
@@ -95,16 +95,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\SaveId.cs" />
-    <Compile Include="Util\SaveIdDictionaryConverter.cs" />
-    <Compile Include="Util\LoadUnitSaveData.cs" />
-    <Compile Include="Data\UnitSaveData.cs" />
-    <Compile Include="Main.cs" />
+    <Compile Include="Code\Data\SaveId.cs" />
+    <Compile Include="Code\Debug.cs" />
+    <Compile Include="Code\Util\AssemblyHelper.cs" />
+    <Compile Include="Code\Util\SaveIdDictionaryConverter.cs" />
+    <Compile Include="Code\Util\LoadUnitSaveData.cs" />
+    <Compile Include="Code\Data\UnitSaveData.cs" />
+    <Compile Include="Code\Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\StageSaveData.cs" />
-    <Compile Include="Patches.cs" />
-    <Compile Include="SavedBattle.cs" />
-    <Compile Include="Util\UIAlarmPopupExtensions.cs" />
+    <Compile Include="Code\Data\StageSaveData.cs" />
+    <Compile Include="Code\Patches.cs" />
+    <Compile Include="Code\SavedBattle.cs" />
+    <Compile Include="Code\Util\UIAlarmPopupExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
